syntax = "proto3";

package notebook;

option go_package = "github.com/yahn1ukov/scribble/proto/notebook";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

message Notebook {
    string id = 1;
    string title = 2;
    optional string description = 3;
    google.protobuf.Timestamp created_at = 4;
}

message CreateNotebookRequest {
    string user_id = 1;
    string title = 2;
    optional string description = 3;
}

message ListNotebooksRequest {
    string user_id = 1;
}

message ListNotebooksResponse {
    repeated Notebook notebooks = 1;
}

message UpdateNotebookRequest {
    string id = 1;
    string user_id = 2;
    optional string title = 3;
    optional string description = 4;
}

message DeleteNotebookRequest {
    string id = 1;
    string user_id = 2;
}

service NotebookService {
    rpc CreateNotebook(CreateNotebookRequest) returns (google.protobuf.Empty);
    rpc ListNotebooks(ListNotebooksRequest) returns (ListNotebooksResponse);
    rpc UpdateNotebook(UpdateNotebookRequest) returns (google.protobuf.Empty);
    rpc DeleteNotebook(DeleteNotebookRequest) returns (google.protobuf.Empty);
}
